Добавлены интерфейсы и классы реализующие их. Добавлены тестовые классы