@@ -1,46 +1,71 @@
+package manager;
+
 import task.Epic;
 import task.SubTask;
 import task.Task;
 import task.TaskStatus;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.*;
 
-public class TaskManager {
+public class InMemoryTaskManager implements TaskManager {
     private final Map<Integer, Task> tasks = new HashMap<>();
     private final Map<Integer, Epic> epics = new HashMap<>();
     private final Map<Integer, SubTask> subTasks = new HashMap<>();
+    
+    private final HistoryManager historyManager = Managers.getDefaultHistory();
+    
     private int idCounter = 0;
 
+    @Override
+    public HistoryManager getHistoryManager() {
+        return historyManager;
+    }
+
+    @Override
     public List<Task> getTasks() {
-        return new ArrayList<>(tasks.values());
-    }
+        ArrayList<Task> results = new ArrayList<>(tasks.values());
+        for (Task result : results) {
+            historyManager.addHistory(result);
+        }
+        return results;
 
+
+    }
+    @Override
     public List<Epic> getEpics() {
-        return new ArrayList<>(epics.values());
+        ArrayList<Epic> results = new ArrayList<>(epics.values());
+        for (Task result : results) {
+            historyManager.addHistory(result);
+        }
+        return results;
     }
 
+    @Override
     public List<SubTask> getSubTasks() {
-        return new ArrayList<>(subTasks.values());
+        ArrayList<SubTask> results = new ArrayList<>(subTasks.values());
+        for (Task result : results) {
+            historyManager.addHistory(result);
+        }
+        return results;
     }
 
-    private int getIdentifier(){ /*Не совсем поняла, что вы имели в виду, потому что описания ошибки в ревью не было. Что конкретно не так?*/
+    private int getIdentifier(){
         idCounter++;
         return idCounter;
     }
 
+    @Override
     public void deleteTasks() {
         tasks.clear();
     }
 
+    @Override
     public void deleteEpics() {
         deleteSubTasks();
         epics.clear();
     }
 
+    @Override
     public void deleteSubTasks() {
         subTasks.clear();
         for (Epic epic : epics.values()) {
@@ -49,22 +74,34 @@ public class TaskManager {
 
     }
 
+    @Override
     public Task getTask(Integer id) {
-        return tasks.get(id);
+        Task task = tasks.get(id);
+        historyManager.addHistory(task);
+        return task;
     }
 
+    @Override
     public Epic getEpic(Integer epicId) {
-        return epics.get(epicId);
+        Epic epic = epics.get(epicId);
+        historyManager.addHistory(epic);
+        return epic;
     }
 
+    @Override
     public SubTask getSubTask(Integer subTaskId) {
-        return subTasks.get(subTaskId);
+
+        SubTask subTask =  subTasks.get(subTaskId);
+        historyManager.addHistory(subTask);
+        return subTask;
     }
 
+    @Override
     public void deleteTask(Integer id) {
         tasks.remove(id);
     }
 
+    @Override
     public void deleteEpic(Integer epicId) {
         Epic epic = epics.get(epicId);
         if (epics.containsKey(epic.getId())) {
@@ -73,6 +110,7 @@ public class TaskManager {
         }
     }
 
+    @Override
     public void deleteSubTask(Integer subTaskId) {
         subTasks.remove(subTaskId);
         for (Epic epic : epics.values()) {
@@ -80,24 +118,28 @@ public class TaskManager {
         }
     }
 
+    @Override
     public Task createTask(Task task){
         task.setId(getIdentifier());
         tasks.put(task.getId(), task);
         return task;
     }
 
+    @Override
     public Epic createEpic(Epic epic){
         epic.setId(getIdentifier());
         epics.put(epic.getId(), epic);
         return epic;
     }
 
+    @Override
     public SubTask createSubTask(SubTask subTask){
         subTask.setId(getIdentifier());
         subTasks.put(subTask.getId(), subTask);
         return subTask;
     }
 
+    @Override
     public void updateTask(Task task){
         if (tasks.containsKey(task.getId())) {
             tasks.put(task.getId(), task);
@@ -106,6 +148,7 @@ public class TaskManager {
         }
     }
 
+    @Override
     public void updateEpic(Epic epic){
         if (epics.containsKey(epic.getId())) {
             epic.setName(epic.getName());
@@ -115,6 +158,7 @@ public class TaskManager {
         }
     }
 
+    @Override
     public void updateSubTask(SubTask subTask){
         if (epics.containsKey(subTask.getEpicId())) {
             if (subTasks.containsKey(subTask.getId())) {
@@ -127,6 +171,7 @@ public class TaskManager {
 
     }
 
+    @Override
     public List<SubTask> getSubTasksOfEpic(int epicId){
         List<SubTask> subTaskList = null;
         Epic epic = epics.get(epicId);
@@ -134,16 +179,20 @@ public class TaskManager {
             subTaskList = epics.get(epicId).getSubTaskList().stream()
                     .filter(subTasks::containsKey)
                     .map(subTasks::get)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return subTaskList;
     }
+
+   
+
+    
 
     /*Метод вытаскивает из подзадач статусы с помощью потока и проверяет их*/
     private void updateStatusEpic(Epic epic){
         var statuses = getSubTasksOfEpic(epic.getId()).stream()
                 .map(Task::getStatus)
-                .collect(Collectors.toList());
+                .toList();
         if (statuses.stream().allMatch(status -> status.equals(TaskStatus.NEW))) {
             epic.setStatus(TaskStatus.NEW);
 
